--- a/templates/config-onokom-air-dk-1-mb-b.json
+++ b/templates/config-onokom-air-dk-1-mb-b.json
@@ -520,9 +520,9 @@
                 ],
                 "enum_titles": [
                     "Stop",
-                    "Horizontal and vertical swing",
-                    "Swinging horizontal blinds",
-                    "Swinging vertical blinds"
+                    "Horizontal and vertical vanes swing",
+                    "Horizontal vanes swing",
+                    "Vertical vanes swing"
                 ],
                 "condition": "Show_vanes_as_range!=1"
             },
@@ -549,6 +549,24 @@
                 "enabled": false,
                 "reg_type": "coil",
                 "address": 7,
+                "type": "switch",
+                "sporadic": true,
+                "group": "additional"
+            },
+            {
+                "name": "Ionization",
+                "enabled": false,
+                "reg_type": "coil",
+                "address": 9,
+                "type": "switch",
+                "sporadic": true,
+                "group": "additional"
+            },
+            {
+                "name": "Outdoor quiet mode",
+                "enabled": false,
+                "reg_type": "coil",
+                "address": 16,
                 "type": "switch",
                 "sporadic": true,
                 "group": "additional"
@@ -739,9 +757,9 @@
                 "Vertical vanes": "Вертикальные жалюзи",
                 "Vanes swing": "Качание жалюзи",
                 "Stop": "Остановлены",
-                "Horizontal and vertical swing": "Качание горизонтальное и вертикальное",
-                "Swinging horizontal blinds": "Качание горизонтальных жалюзи",
-                "Swinging vertical blinds": "Качание вертикальных жалюзи",
+                "Horizontal and vertical vanes swing": "Качание горизонтальных и вертикальных жалюзи",
+                "Horizontal vanes swing": "Качание горизонтальных жалюзи",
+                "Vertical vanes swing": "Качание вертикальных жалюзи",
                 "Show fan as range": "Отображать вентилятор как ползунок",
                 "Additional": "Дополнительные режимы и функции",
                 "1 Speed": "1 Скорость",
@@ -752,6 +770,8 @@
                 "Quiet mode": "Режим тихий",
                 "Eco mode": "Режим эко",
                 "Turbo mode": "Режим турбо",
+                "Ionization": "Ионизация",
+                "Outdoor quiet mode": "Тихий режим наружного блока",
                 "Indication": "Индикация",
                 "Screen light": "Подсветка экрана",
                 "Screen low bright": "Ослабить яркость экрана",
