--- a/templates/config-onokom-air-gr-5-mb-b.json
+++ b/templates/config-onokom-air-gr-5-mb-b.json
@@ -1,15 +1,15 @@
 {
     "title": "template_title",
-    "device_type": "ONOKOM-AIR-TCL-3-MB-B",
+    "device_type": "ONOKOM-AIR-GR-5-MB-B",
     "group": "g-air-conditioning",
     "hw": [
         {
-            "signature": "TCL-3-MB-B"
+            "signature": "GR-5-MB-B"
         }
     ],
     "device": {
-        "name": "ONOKOM-AIR-TCL-3-MB-B",
-        "id": "ONOKOM-AIR-TCL-3-MB-B",
+        "name": "ONOKOM-AIR-GR-5-MB-B",
+        "id": "ONOKOM-AIR-GR-5-MB-B",
         "groups": [
             {
                 "title": "General",
@@ -48,6 +48,22 @@
             }
         ],
         "parameters": [
+            {
+                "id": "Disable_screen_when_power_off",
+                "title": "Disable screen when power off",
+                "address": 41,
+                "reg_type": "coil",
+                "enum": [
+                    0,
+                    1
+                ],
+                "enum_titles": [
+                    "No",
+                    "Yes"
+                ],
+                "group": "indication",
+                "order": 1
+            },
             {
                 "id": "Allow_the_use_of_an_external_temperature_sensor",
                 "title": "Allow the use of an external temperature sensor",
@@ -369,10 +385,10 @@
                 "condition": "Allow_the_use_of_an_external_temperature_sensor==1"
             },
             {
-                "name": "Indoor heat exchanger temperature",
+                "name": "Outdoor air temperature",
                 "enabled": false,
                 "reg_type": "holding",
-                "address": 23,
+                "address": 4,
                 "type": "value",
                 "format": "s16",
                 "scale": 0.01,
@@ -388,7 +404,7 @@
                 "type": "range",
                 "format": "s16",
                 "min": 16,
-                "max": 31,
+                "max": 30,
                 "scale": 0.01,
                 "sporadic": true,
                 "group": "temperatureControl",
@@ -435,7 +451,7 @@
                 "type": "range",
                 "format": "u16",
                 "min": 0,
-                "max": 1,
+                "max": 6,
                 "sporadic": true,
                 "group": "vanes",
                 "condition": "Show_vanes_as_range==1"
@@ -447,16 +463,26 @@
                 "type": "value",
                 "format": "u16",
                 "min": 0,
-                "max": 1,
+                "max": 6,
                 "sporadic": true,
                 "group": "vanes",
                 "enum": [
                     0,
-                    1
+                    1,
+                    2,
+                    3,
+                    4,
+                    5,
+                    6
                 ],
                 "enum_titles": [
                     "Stop",
-                    "Swing"
+                    "Swing",
+                    "Lowest",
+                    "Low",
+                    "Middle",
+                    "High",
+                    "Highest"
                 ],
                 "condition": "Show_vanes_as_range!=1"
             },
@@ -467,7 +493,7 @@
                 "type": "range",
                 "format": "u16",
                 "min": 0,
-                "max": 1,
+                "max": 6,
                 "sporadic": true,
                 "group": "vanes",
                 "condition": "Show_vanes_as_range==1"
@@ -479,16 +505,26 @@
                 "type": "value",
                 "format": "u16",
                 "min": 0,
-                "max": 1,
+                "max": 6,
                 "sporadic": true,
                 "group": "vanes",
                 "enum": [
                     0,
-                    1
+                    1,
+                    2,
+                    3,
+                    4,
+                    5,
+                    6
                 ],
                 "enum_titles": [
                     "Stop",
-                    "Swing"
+                    "Swing",
+                    "Far Left",
+                    "Left",
+                    "Middle",
+                    "Right",
+                    "Far Right"
                 ],
                 "condition": "Show_vanes_as_range!=1"
             },
@@ -563,9 +599,27 @@
                 "group": "additional"
             },
             {
+                "name": "Ionization",
+                "enabled": false,
+                "reg_type": "coil",
+                "address": 9,
+                "type": "switch",
+                "sporadic": true,
+                "group": "additional"
+            },
+            {
                 "name": "Screen light",
                 "reg_type": "coil",
                 "address": 2,
+                "type": "switch",
+                "sporadic": true,
+                "group": "indication"
+            },
+            {
+                "name": "Disable screen when power off",
+                "enabled": false,
+                "reg_type": "coil",
+                "address": 41,
                 "type": "switch",
                 "sporadic": true,
                 "group": "indication"
@@ -679,10 +733,10 @@
         ],
         "translations": {
             "en": {
-                "template_title": "ONOKOM AIR TCL-3-MB-B (Adapter for semi industrial TCL systems)"
+                "template_title": "ONOKOM AIR GR-5-MB-B (Adapter for semi-industrial GREE systems)"
             },
             "ru": {
-                "template_title": "ONOKOM AIR TCL-3-MB-B (Адаптер для полупромышленных систем TCL)",
+                "template_title": "ONOKOM AIR GR-5-MB-B (Адаптер для полупромышленных систем GREE)",
                 "General": "Основные режимы и функции",
                 "Active": "Состояние",
                 "Mode": "Режим",
@@ -702,7 +756,7 @@
                 "Temperature control": "Контроль температуры",
                 "Allow the use of an external temperature sensor": "Разрешить использование внешнего датчика температуры",
                 "Indoor air temperature": "Температура воздуха в помещении",
-                "Indoor heat exchanger temperature": "Температура внутреннего теплообменника",
+                "Outdoor air temperature": "Температура воздуха на улице",
                 "Target temperature": "Целевая температура",
                 "Show thermostat state as range": "Отображать состояние термостата как ползунок",
                 "Thermostat state": "Состояние термостата",
@@ -710,6 +764,15 @@
                 "Show vanes as range": "Отображать жалюзи как ползунок",
                 "Horizontal vanes": "Горизонтальные жалюзи",
                 "Swing": "Качание",
+                "Lowest": "Самое низкое",
+                "Low": "Низкое",
+                "Middle": "Среднее",
+                "High": "Высокое",
+                "Highest": "Самое высокое",
+                "Far Left": "Самое левое",
+                "Left": "Левое",
+                "Right": "Правое",
+                "Far Right": "Самое правое",
                 "Vertical vanes": "Вертикальные жалюзи",
                 "Vanes swing": "Качание жалюзи",
                 "Stop": "Остановлены",
@@ -727,8 +790,10 @@
                 "Eco mode": "Режим эко",
                 "Turbo mode": "Режим турбо",
                 "Sleep mode": "Режим сна",
+                "Ionization": "Ионизация",
                 "Indication": "Индикация",
                 "Screen light": "Подсветка экрана",
+                "Disable screen when power off": "Отключать экран при отключении питания",
                 "No": "Нет",
                 "Yes": "Да",
                 "Baud rate": "Скорость обмена",
