--- a/templates/config-onokom-air-hs-5-mb-b.json
+++ b/templates/config-onokom-air-hs-5-mb-b.json
@@ -166,6 +166,33 @@
                 ],
                 "group": "hw_info",
                 "order": 1
+            },
+            {
+                "id": "status_led",
+                "title": "Status LED",
+                "address": 450,
+                "reg_type": "holding",
+                "format": "s16",
+                "type": "value",
+                "enum": [
+                    0,
+                    1,
+                    2,
+                    3,
+                    8,
+                    9
+                ],
+                "default": 0,
+                "enum_titles": [
+                    "Normal mode",
+                    "Disabled if no errors",
+                    "Disabled untill reboot",
+                    "Always disabled",
+                    "Green untill reboot",
+                    "Red untill reboot"
+                ],
+                "group": "hw_info",
+                "order": 1
             }
         ],
         "channels": [
@@ -301,7 +328,7 @@
                 "type": "range",
                 "format": "u16",
                 "min": 0,
-                "max": 6,
+                "max": 7,
                 "sporadic": true,
                 "group": "general",
                 "condition": "Show_fan_as_range==1"
@@ -364,19 +391,6 @@
                 "group": "temperatureControl",
                 "units": "deg C",
                 "condition": "Allow_the_use_of_an_external_temperature_sensor==1"
-            },
-            {
-                "name": "Outdoor air temperature",
-                "enabled": false,
-                "reg_type": "holding",
-                "address": 4,
-                "type": "value",
-                "format": "s16",
-                "scale": 0.01,
-                "sporadic": true,
-                "group": "temperatureControl",
-                "readonly": true,
-                "units": "deg C"
             },
             {
                 "name": "Target temperature",
@@ -541,9 +555,9 @@
                 ],
                 "enum_titles": [
                     "Stop",
-                    "Horizontal and vertical swing",
-                    "Swinging horizontal blinds",
-                    "Swinging vertical blinds"
+                    "Horizontal and vertical vanes swing",
+                    "Horizontal vanes swing",
+                    "Vertical vanes swing"
                 ],
                 "condition": "Show_vanes_as_range!=1"
             },
@@ -718,7 +732,6 @@
                 "Temperature control": "Контроль температуры",
                 "Allow the use of an external temperature sensor": "Разрешить использование внешнего датчика температуры",
                 "Indoor air temperature": "Температура воздуха в помещении",
-                "Outdoor air temperature": "Температура воздуха на улице",
                 "Target temperature": "Целевая температура",
                 "Show thermostat state as range": "Отображать состояние термостата как ползунок",
                 "Thermostat state": "Состояние термостата",
@@ -740,9 +753,9 @@
                 "Vertical vanes": "Вертикальные жалюзи",
                 "Vanes swing": "Качание жалюзи",
                 "Stop": "Остановлены",
-                "Horizontal and vertical swing": "Качание горизонтальное и вертикальное",
-                "Swinging horizontal blinds": "Качание горизонтальных жалюзи",
-                "Swinging vertical blinds": "Качание вертикальных жалюзи",
+                "Horizontal and vertical vanes swing": "Качание горизонтальных и вертикальных жалюзи",
+                "Horizontal vanes swing": "Качание горизонтальных жалюзи",
+                "Vertical vanes swing": "Качание вертикальных жалюзи",
                 "Show fan as range": "Отображать вентилятор как ползунок",
                 "1 Speed": "1 Скорость",
                 "2 Speed": "2 Скорость",
@@ -775,7 +788,14 @@
                 "Indoor unit model": "Внутренний блок",
                 "Debug": "Диагностика",
                 "Temeperature correction": "Коррекция температуры",
-                "AC connected": "Кондиционер подключен"
+                "AC connected": "Кондиционер подключен",
+                "Status LED": "Индикатор состояния",
+                "Normal mode": "Обычный режим",
+                "Disabled if no errors": "Отключен если нет ошибок",
+                "Disabled untill reboot": "Отключен до перезагрузки",
+                "Always disabled": "Всегда отключен",
+                "Green untill reboot": "Зеленый до перезагрузки",
+                "Red untill reboot": "Красный до перезагрузки"
             }
         }
     }
