--- a/templates/config-onokom-air-mh-8-mb-b.json
+++ b/templates/config-onokom-air-mh-8-mb-b.json
@@ -1,15 +1,15 @@
 {
     "title": "template_title",
-    "device_type": "ONOKOM-AIR-TCL-3-MB-B",
+    "device_type": "ONOKOM-AIR-MH-8-MB-B",
     "group": "g-air-conditioning",
     "hw": [
         {
-            "signature": "TCL-3-MB-B"
+            "signature": "ME-1-MB-B"
         }
     ],
     "device": {
-        "name": "ONOKOM-AIR-TCL-3-MB-B",
-        "id": "ONOKOM-AIR-TCL-3-MB-B",
+        "name": "ONOKOM-AIR-MH-8-MB-B",
+        "id": "ONOKOM-AIR-MH-8-MB-B",
         "groups": [
             {
                 "title": "General",
@@ -25,16 +25,6 @@
                 "title": "Vanes",
                 "id": "vanes",
                 "order": 3
-            },
-            {
-                "title": "Additional",
-                "id": "additional",
-                "order": 4
-            },
-            {
-                "title": "Indication",
-                "id": "indication",
-                "order": 5
             },
             {
                 "title": "HW Info",
@@ -264,7 +254,7 @@
                 "type": "range",
                 "format": "u16",
                 "min": 0,
-                "max": 5,
+                "max": 3,
                 "sporadic": true,
                 "group": "general",
                 "condition": "Show_fan_as_range==1"
@@ -276,24 +266,20 @@
                 "type": "value",
                 "format": "u16",
                 "min": 0,
-                "max": 5,
+                "max": 3,
                 "sporadic": true,
                 "group": "general",
                 "enum": [
                     0,
                     1,
                     2,
-                    3,
-                    4,
-                    5
+                    3
                 ],
                 "enum_titles": [
                     "Auto",
                     "1 Speed",
                     "2 Speed",
-                    "3 Speed",
-                    "4 Speed",
-                    "5 Speed"
+                    "3 Speed"
                 ],
                 "condition": "Show_fan_as_range!=1"
             },
@@ -304,7 +290,7 @@
                 "type": "range",
                 "format": "u16",
                 "min": 0,
-                "max": 7,
+                "max": 4,
                 "sporadic": true,
                 "group": "general",
                 "condition": "Show_fan_as_range==1"
@@ -316,7 +302,7 @@
                 "type": "value",
                 "format": "u16",
                 "min": 0,
-                "max": 7,
+                "max": 4,
                 "sporadic": true,
                 "group": "general",
                 "enum": [
@@ -324,20 +310,14 @@
                     1,
                     2,
                     3,
-                    4,
-                    5,
-                    6,
-                    7
+                    4
                 ],
                 "enum_titles": [
                     "Auto",
                     "Quiet mode",
                     "1 Speed",
                     "2 Speed",
-                    "3 Speed",
-                    "4 Speed",
-                    "5 Speed",
-                    "Turbo mode"
+                    "3 Speed"
                 ],
                 "condition": "Show_fan_as_range!=1"
             },
@@ -369,26 +349,13 @@
                 "condition": "Allow_the_use_of_an_external_temperature_sensor==1"
             },
             {
-                "name": "Indoor heat exchanger temperature",
-                "enabled": false,
-                "reg_type": "holding",
-                "address": 23,
-                "type": "value",
-                "format": "s16",
-                "scale": 0.01,
-                "sporadic": true,
-                "group": "temperatureControl",
-                "readonly": true,
-                "units": "deg C"
-            },
-            {
                 "name": "Target temperature",
                 "reg_type": "holding",
                 "address": 5,
                 "type": "range",
                 "format": "s16",
                 "min": 16,
-                "max": 31,
+                "max": 30,
                 "scale": 0.01,
                 "sporadic": true,
                 "group": "temperatureControl",
@@ -434,8 +401,8 @@
                 "address": 9,
                 "type": "range",
                 "format": "u16",
-                "min": 0,
-                "max": 1,
+                "min": 1,
+                "max": 5,
                 "sporadic": true,
                 "group": "vanes",
                 "condition": "Show_vanes_as_range==1"
@@ -447,48 +414,24 @@
                 "type": "value",
                 "format": "u16",
                 "min": 0,
-                "max": 1,
+                "max": 5,
                 "sporadic": true,
                 "group": "vanes",
                 "enum": [
                     0,
-                    1
+                    1,
+                    2,
+                    3,
+                    4,
+                    5
                 ],
                 "enum_titles": [
                     "Stop",
-                    "Swing"
-                ],
-                "condition": "Show_vanes_as_range!=1"
-            },
-            {
-                "name": "Vertical vanes",
-                "reg_type": "holding",
-                "address": 10,
-                "type": "range",
-                "format": "u16",
-                "min": 0,
-                "max": 1,
-                "sporadic": true,
-                "group": "vanes",
-                "condition": "Show_vanes_as_range==1"
-            },
-            {
-                "name": "Vertical vanes",
-                "reg_type": "holding",
-                "address": 10,
-                "type": "value",
-                "format": "u16",
-                "min": 0,
-                "max": 1,
-                "sporadic": true,
-                "group": "vanes",
-                "enum": [
-                    0,
-                    1
-                ],
-                "enum_titles": [
-                    "Stop",
-                    "Swing"
+                    "Swing",
+                    "Lowest",
+                    "Low",
+                    "Middle",
+                    "High"
                 ],
                 "condition": "Show_vanes_as_range!=1"
             },
@@ -525,50 +468,6 @@
                     "Vertical vanes swing"
                 ],
                 "condition": "Show_vanes_as_range!=1"
-            },
-            {
-                "name": "Quiet mode",
-                "enabled": false,
-                "reg_type": "coil",
-                "address": 4,
-                "type": "switch",
-                "sporadic": true,
-                "group": "additional"
-            },
-            {
-                "name": "Eco mode",
-                "enabled": false,
-                "reg_type": "coil",
-                "address": 6,
-                "type": "switch",
-                "sporadic": true,
-                "group": "additional"
-            },
-            {
-                "name": "Turbo mode",
-                "enabled": false,
-                "reg_type": "coil",
-                "address": 7,
-                "type": "switch",
-                "sporadic": true,
-                "group": "additional"
-            },
-            {
-                "name": "Sleep mode",
-                "enabled": false,
-                "reg_type": "coil",
-                "address": 8,
-                "type": "switch",
-                "sporadic": true,
-                "group": "additional"
-            },
-            {
-                "name": "Screen light",
-                "reg_type": "coil",
-                "address": 2,
-                "type": "switch",
-                "sporadic": true,
-                "group": "indication"
             },
             {
                 "name": "Temeperature correction",
@@ -679,10 +578,10 @@
         ],
         "translations": {
             "en": {
-                "template_title": "ONOKOM AIR TCL-3-MB-B (Adapter for semi industrial TCL systems)"
+                "template_title": "ONOKOM-AIR-MH-8-MB-B (Adapter for semi-industrial and multi-split air conditioning systems Mitsubishi Heavy)"
             },
             "ru": {
-                "template_title": "ONOKOM AIR TCL-3-MB-B (Адаптер для полупромышленных систем TCL)",
+                "template_title": "ONOKOM-AIR-MH-8-MB-B (Адаптер для  полупромышленными и мультисплит системами кондиционирования Mitsubishi Heavy)",
                 "General": "Основные режимы и функции",
                 "Active": "Состояние",
                 "Mode": "Режим",
@@ -702,7 +601,6 @@
                 "Temperature control": "Контроль температуры",
                 "Allow the use of an external temperature sensor": "Разрешить использование внешнего датчика температуры",
                 "Indoor air temperature": "Температура воздуха в помещении",
-                "Indoor heat exchanger temperature": "Температура внутреннего теплообменника",
                 "Target temperature": "Целевая температура",
                 "Show thermostat state as range": "Отображать состояние термостата как ползунок",
                 "Thermostat state": "Состояние термостата",
@@ -710,25 +608,20 @@
                 "Show vanes as range": "Отображать жалюзи как ползунок",
                 "Horizontal vanes": "Горизонтальные жалюзи",
                 "Swing": "Качание",
-                "Vertical vanes": "Вертикальные жалюзи",
+                "Lowest": "Самое низкое",
+                "Low": "Низкое",
+                "Middle": "Среднее",
+                "High": "Высокое",
                 "Vanes swing": "Качание жалюзи",
                 "Stop": "Остановлены",
                 "Horizontal and vertical vanes swing": "Качание горизонтальных и вертикальных жалюзи",
                 "Horizontal vanes swing": "Качание горизонтальных жалюзи",
                 "Vertical vanes swing": "Качание вертикальных жалюзи",
                 "Show fan as range": "Отображать вентилятор как ползунок",
-                "Additional": "Дополнительные режимы и функции",
                 "1 Speed": "1 Скорость",
                 "2 Speed": "2 Скорость",
                 "3 Speed": "3 Скорость",
-                "4 Speed": "4 Скорость",
-                "5 Speed": "5 Скорость",
                 "Quiet mode": "Режим тихий",
-                "Eco mode": "Режим эко",
-                "Turbo mode": "Режим турбо",
-                "Sleep mode": "Режим сна",
-                "Indication": "Индикация",
-                "Screen light": "Подсветка экрана",
                 "No": "Нет",
                 "Yes": "Да",
                 "Baud rate": "Скорость обмена",
