--- a/debian/wb-mqtt-serial.wb-mqtt-serial.service
+++ b/debian/wb-mqtt-serial.wb-mqtt-serial.service
@@ -9,6 +9,7 @@ Restart=on-failure
 RestartSec=1
 User=root
 ExecStart=/usr/bin/wb-mqtt-serial
+ExecStartPre=/usr/lib/wb-mqtt-serial/generate-system-config.sh
 
 [Install]
 WantedBy=multi-user.target
