Add config-wb-mai2-cc.json.jinja, rename config-wb-mai2-cc.json to config-wb-mai2-cc-deprecated.json

--- a/templates/config-wb-mai2-cc-deprecated.json
+++ b/templates/config-wb-mai2-cc-deprecated.json
@@ -2,6 +2,7 @@
     "title": "WB-MAI2-mini_template_title",
     "device_type": "WB-MAI2-mini/CC",
     "group": "g-wb",
+    "deprecated": true,
     "hw": [
         {
             "signature": "MAI2CC"
